tests/typing/good/testfile-extends-3.scala

class A(x: Int) {}
class B(x: Int) extends A(x+1) {}
object Main { def main(args: Array[String]) { } }
