tests/typing/bad/testfile-extends-9.scala

class A(x: Int) {}
class B() extends A() {}
object Main { def main(args: Array[String]) { } }
